# imposter-bot

./: .gitignore  example.env  imposter.py  pyproject.toml  requirements.txt
cmd/admin/: adminrole.py
cmd/misc/: ping.py
cmd/osint/: ipinfo.py
cmd/spoof/: mask.py
config/: embeds.py  emojis.py  prefix.py  settings.py
database/: base.py  data.db  init.py  models.py  session.py
database/crud/: base.py  guild.py
manager/handlers/: bot_mention.py
manager/startups/: presence.py
utils/: permissions.py  respond.py
