[project]
name = "imposter"
version = "0.1.0"
description = "Discord OSINT bot"
readme = "README.md"

requires-python = ">=3.11,<3.13"

dependencies = [
    "discord>=2.3.2,<3.0.0",
    "aiohttp>=3.9,<3.13",
    "aiosqlite>=0.22.1",
    "pyshorteners>=1.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "psutil>=7.2.2",
]
